# greyJay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/linux/: build_all.sh  build_cinder.sh  build_ffmpeg.sh  build_openh264.sh  build_x264.sh  build_x265.sh  install_deps.sh
source/: main.cpp
